[package]
name = "asp_gui"
version = "0.1.4"
edition = "2021"
description = "GUI for asp_lib"
license = "MIT OR Apache-2.0"
repository = "https://github.com/egonik-unlp/asp_gui"
authors = ["Eduardo Gonik <gonik@quimica.unlp.edu.ar>"]
# documentation = "https://docs.rs/asp_lib/latest/asp_lib/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asp_lib = { path = "../asp_lib" , version = "0.1.12"}
eframe = "0.22.0"
egui = "0.22.0"
image = "0.24.7"
rfd = "0.11.4"
